# eddy-coherence-ml

./: .gitattributes  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt  test_models.py  viz_utils.py
.github_workflow/: update-website.yml
docs/: index.html  update_web.py
docs/data/: 2025-04-19.nc  2025-04-20.nc  2025-04-21.nc  2025-04-22.nc  2025-04-23.nc  2025-04-24.nc  2025-04-25.nc  2025-04-26.nc  2025-04-27.nc  2026-02-19.nc  2026-02-20.nc  2026-02-21.nc  2026-02-22.nc  2026-02-23.nc  2026-02-24.nc  2026-02-25.nc  etopo_gom_coarse.nc
input_data/: test_data_prev_days_2_days_after_10_2010_only_ssh.pkl  test_data_prev_days_2_days_after_10_2010_ssh_sst.pkl  test_data_prev_days_2_days_after_20_2010_only_ssh.pkl  test_data_prev_days_2_days_after_20_2010_ssh_sst_chlora.pkl  test_data_prev_days_2_days_after_5_2010_only_ssh.pkl  test_data_prev_days_2_days_after_5_2010_ssh_sst_chlora.pkl
model_weights/EddyDetection_ALL_1993-2022_gaps_filled_submean_only_ssh/DaysBefore_02_DaysAfter_05_DaysCoherent_05/: model_weights_DaysBefore_02_DaysAfter_05_DaysCoherent_05.pth
model_weights/EddyDetection_ALL_1993-2022_gaps_filled_submean_only_ssh/DaysBefore_02_DaysAfter_10_DaysCoherent_10/: model_weights_DaysBefore_02_DaysAfter_10_DaysCoherent_10.pth
model_weights/EddyDetection_ALL_1993-2022_gaps_filled_submean_only_ssh/DaysBefore_02_DaysAfter_20_DaysCoherent_20/: model_weights_DaysBefore_02_DaysAfter_20_DaysCoherent_20.pth
models/: Models2D.py
(+3 files in other folders)
