[project]
name = "eddy-coherence-ml"
version = "0.1.0"
description = "ML model to predict eddy coherence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmocean>=4.0.3",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "xarray>=2025.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["D203", "D213"]
